<resources>
    <string name="app_name">Movie App</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="email">Email</string>
    <string name="popular">Popular</string>
    <string name="trending">Trending</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="watchlist">Watchlist</string>
    <string name="saved_movies">Favorite Movies</string>
    <string name="account">Account</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeUser">Welcome %1$s</string>
    <string name="movie">Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>